--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-
 <!DOCTYPE html>
- <hr class="dashed"></hr>
 <html>
 
   <head>
@@ -19,6 +17,11 @@
     body{
       background-color:#b27a15;
     }
+	.footer {
+  background-color: #84a9ac;
+  padding: 1px;
+  text-align: center;
+}
   p {
   font-size: 17px;
 }
@@ -49,7 +52,14 @@ hr.dashed {
     background: black;
     color: cornflowerblue;
     border-radius: 17px;"><strong>E-mail Marketing</strong></h1>
-	<hr class="dashed"></hr>
+<div style="margin-left:24em" color:"black" >  
+  <span><a href="index.html">Home</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <span><a href="form_f.html">Sign-Up</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <span><a href="login_f.html">Sign-In</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <span><a href=#hee>Info</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <span><a href=#cont>Contact Us</a></span>
+  <br></br><br></br>
+</div>
 	<table>
 	<tr> 
 	<td>
@@ -82,7 +92,7 @@ There are many reasons you should make email marketing one of your top prioritie
 	
   <marquee direction="left" style="color:302579;"> <h1 TD ALIGN="CENTER">Important Links</h1></marquee>
   <hr class="dashed"></hr>
-     <ul class="rss">
+     <ul id="hee" class="rss">
 	 
   <li><a href="https://www.thebalancesmb.com/email-marketing-2948346/">What Is Email Marketing?</a></li>
   </br></br>
@@ -108,7 +118,7 @@ There are many reasons you should make email marketing one of your top prioritie
    
   <br></br>
   <br></br> 
-<footer class="para1" align="middle">
+<footer id="cont" class="para1" align="middle">
   <p>Web page Designed by</p> <p style="font-family:cursive"> Sameer Shaik <br></br> 20031J0027</p>
 <br></br>
 <h4 align ="middle"> Contact us </h4>
@@ -123,6 +133,12 @@ There are many reasons you should make email marketing one of your top prioritie
     <a href="https://www.linkedin.com/in/sameer-shaik-632b7b117/" ><img src="link.png" style="width:42px;height:42px;"></a>
   </div>
 </footer>
-   
+   <div class="footer">
+    <h5 TD ALIGN="CENTER" style="border: 2px solid;
+    background: black;
+    color: cornflowerblue;
+    border-radius: px;">
+  © 2020 MSIT Jntuh All Rights Reserved</h5>
+</div>
    </body>
 </html>
