--- a/index.html
+++ b/index.html
@@ -2,51 +2,9 @@
 <html>
 
   <head>
-  <style>
-    li{
-      list-style-type:none;
-          margin: -10px;
-
-    }
-    .para1{
-          border: 3px dashed green;
-    background: black;
-    color: goldenrod;
-    padding: 1em;
-    }
-    body{
-      background-color:#b27a15;
-    }
-	.footer {
-  background-color: #84a9ac;
-  padding: 1px;
-  text-align: center;
-}
-  p {
-  font-size: 17px;
-}
-h1 {
-font-size: 23px;
-font-family: cursive;
-}
-hr.dashed {
-  border-top: 3px dotted  #bbb;
-}
-    a{
-      text-decoration:none;
-      color:brown;
-	  font-size: 20px;
-    }
-    a:hover{
-      background: black;
-    cursor: pointer;
-    }
-</style>
-     <BODY BGCOLOR=”#4682B4">
-
-    <title>Business Plan</title>
-
+  <link rel="stylesheet" href="stylez.css">
   </head>
+   <title>Business Plan</title>
 <h1 TD ALIGN="CENTER";><marquee direction="Right" style="color:aqua;">Business Plan</h1></marquee>
   <h1 TD ALIGN="CENTER" style="border: 1px solid;
     background: black;
@@ -78,7 +36,7 @@ hr.dashed {
 <marquee direction="RIGHT" >	<h1 style="color:aqua;" style="background-color:DodgerBlue;">Importance of Email Marketing</h1></marquee>
 <p class="para1"><font face="Courier" >We’ve covered the biggest question, what is email marketing, but haven’t gotten into why email marketing is so very important for your business. Let’s talk about that now.
 
-Despite the rise of social media and unsolicited spam email (which is never a Good marketing strategy, by the way), email remains the most effective way to nurture leads and boost customer loyalty.
+Despite the rise of social media and unsolicited spam email (which is never a good marketing strategy, by the way), email remains the most effective way to nurture leads and boost customer loyalty.
 
 There are many reasons you should make email marketing one of your top priorities, but here are the top 3:
 
