--- a/info.html
+++ b/info.html
@@ -2,51 +2,13 @@
 <html>
 
   <head>
-  <style>
-    li{
-      list-style-type:none;
-          margin: -10px;
-
-    }
-    .para1{
-          border: 3px dashed green;
-    background: black;
-    color: goldenrod;
-    padding: 1em;
-    }
-    body{
-      background-color:#b27a15;
-    }
-	.footer {
-  background-color: #84a9ac;
-  padding: 1px;
-  text-align: center;
-}
-  p {
-  font-size: 17px;
-}
-h1 {
-font-size: 23px;
-font-family: cursive;
-}
-hr.dashed {
-  border-top: 3px dotted  #bbb;
-}
-    a{
-      text-decoration:none;
-      color:brown;
-	  font-size: 20px;
-    }
-    a:hover{
-      background: black;
-    cursor: pointer;
-    }
-</style>
+ <link rel="stylesheet" href="stylez.css">
+  </head>
      <BODY BGCOLOR=”#4682B4">
 
     <title>Business Plan</title>
 
-  </head>
+
 <h1 TD ALIGN="CENTER";><marquee direction="Right" style="color:aqua;">Business Plan</h1></marquee>
   <h1 TD ALIGN="CENTER" style="border: 1px solid;
     background: black;
@@ -76,7 +38,7 @@ hr.dashed {
     </br></br>
   <li><a href="https://www.quicksprout.com/best-email-marketing-services/">Top 10 Best Email Marketing Services</a></li>
 </ul>
-<br></br><br></br><br></br><br></br>
+<br></br><br></br><br></br><br></br><br></br>
  <div class="footer">
     <h5 TD ALIGN="CENTER" style="border: 2px solid;
     background: black;
