--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,12 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
-  <style>
-    li{
-      list-style-type:none;
-          margin: -10px;
-
-    }
-    .para1{
-          border: 3px dashed green;
-    background: black;
-    color: goldenrod;
-    padding: 1em;
-    }
-    body{
-      background-color:#b27a15;
-    }
-  p {
-  font-size: 17px;
-}
-h1 {
-font-size: 23px;
-font-family: cursive;
-}
-hr.dashed {
-  border-top: 3px dotted  #bbb;
-}
-    a{
-      text-decoration:none;
-      color:brown;
-	  font-size: 20px;
-    }
-	.footer {
-  background-color: #84a9ac;
-  padding: 1px;
-  text-align: center;
-}
-    a:hover{
-      background: black;
-    cursor: pointer;
-    }
-</style>
+ <head>
+  <link rel="stylesheet" href="stylez.css">
+  </head>
      <BODY BGCOLOR=”#4682B4">
 
     <title>Business Plan</title>
 
-  </head>
 <h1 TD ALIGN="CENTER";><marquee direction="Right" style="color:aqua;">Business Plan</h1></marquee>
   <h1 TD ALIGN="CENTER" style="border: 1px solid;
     background: black;
