--- a/form_f.html
+++ b/form_f.html
@@ -2,230 +2,9 @@
 <html>
 
   <head>
-  <style>
-    li{
-      list-style-type:none;
-          margin: -10px;
-
-    }
-    .para1{
-          border: 3px dashed green;
-    background: black;
-    color: goldenrod;
-    padding: 1em;
-    }
-    body{
-      background-color:#b27a15;
-    }
-  p {
-  font-size: 17px;
-}
-h1 {
-font-size: 23px;
-font-family: cursive;
-}
-hr.dashed {
-  border-top: 3px dotted  #bbb;
-}
-    a{
-      text-decoration:none;
-      color:brown;
-	  font-size: 20px;
-    }
-    a:hover{
-      background: black;
-    cursor: pointer;
-    }
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.container {
-  position: relative;
-  border-radius: 5px;
-  background-color: #f6eec9;
-  padding: 20px 0 30px 0;
-} 
-
-input,
-.btn {
-  width: 100%;
-  padding: 12px;
-  border: none;
-  border-radius: 4px;
-  margin: 5px 0;
-  opacity: 0.85;
-  display: inline-block;
-  font-size: 17px;
-  line-height: 20px;
-  text-decoration: none;
-}
-
-input:hover,
-.btn:hover {
-  opacity: 1;
-}
-
-.fb {
-  background-color: #3B5998;
-  color: white;
-}
-
-.twitter {
-  background-color: #55ACEE;
-  color: white;
-}
-
-.google {
-  background-color: #dd4b39;
-  color: white;
-}
-
-
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #cf7500;
-}
-
-
-.col {
-  float: left;
-  width: 50%;
-  margin: auto;
-  padding: 0 50px;
-  margin-top: 6px;
-}
-
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.vl {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  border: 2px solid #ddd;
-  height: 175px;
-}
-
-
-.vl-innertext {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #cf7500;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  padding: 8px 10px;
-}
-
-.hide-md-lg {
-  display: none;
-}
-
-/* bottom container */
-.bottom-container {
-  text-align: center;
-  background-color: #30475e;
-  border-radius: 0px 0px 4px 4px;
-}
-
-@media screen and (max-width: 650px) {
-  .col {
-    width: 100%;
-    margin-top: 0;
-  }
-  /* hide the vertical line */
-  .vl {
-    display: none;
-  }
-  /* show the hidden text on small screens */
-  .hide-md-lg {
-    display: block;
-    text-align: center;
-  }
-}
-* {
-  box-sizing: border-box;
-}
-
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
-}
-
-input[type=submit] {
-  background-color: #0f3057;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  float: right;
-}
-
-input[type=submit]:hover {
-  background-color: #0f3057;
-}
-
-.container {
-  border-radius: 5px;
-  background-color: #f4ebc1;
-  padding: 20px;
-}
-
-.col-25 {
-  float: left;
-  width: 25%;
-  margin-top: 6px;
-}
-
-.col-75 {
-  float: left;
-  width: 75%;
-  margin-top: 6px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.footer {
-  background-color: #84a9ac;
-  padding: 1px;
-  text-align: center;
-}
-
-@media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
-    width: 100%;
-    margin-top: 0;
-  }
-}
-</style>
+ <head>
+  <link rel="stylesheet" href="stylez.css">
+  </head>
      <BODY BGCOLOR=”#4682B4">
 
     <title>Business Plan</title>
@@ -276,8 +55,8 @@ input[type=submit]:hover {
     </div>
     <div class="col-75">
       <select id="country" name="country">
-	  <option value="australia">India</option>
-        <option value="australia">Germany</option>
+	  <option value="india">India</option>
+        <option value="germany">Germany</option>
         <option value="canada">Canada</option>
         <option value="usa">USA</option>
       </select>
