--- a/login_f.html
+++ b/login_f.html
@@ -1,171 +1,13 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-  <style>
-    li{
-      list-style-type:none;
-          margin: -10px;
-
-    }
-    .para1{
-          border: 3px dashed green;
-    background: black;
-    color: goldenrod;
-    padding: 1em;
-    }
-    body{
-      background-color:#b27a15;
-    }
-  p {
-  font-size: 17px;
-}
-h1 {
-font-size: 23px;
-font-family: cursive;
-}
-hr.dashed {
-  border-top: 3px dotted  #bbb;
-}
-    a{
-      text-decoration:none;
-      color:brown;
-	  font-size: 20px;
-    }
-    a:hover{
-      background: black;
-    cursor: pointer;
-    }
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.container {
-  position: relative;
-  border-radius: 5px;
-  background-color: #goldenrod;
-  padding: 20px 0 30px 0;
-} 
-
-input,
-.btn {
-  width: 100%;
-  padding: 12px;
-  border: none;
-  border-radius: 4px;
-  margin: 5px 0;
-  opacity: 0.85;
-  display: inline-block;
-  font-size: 17px;
-  line-height: 20px;
-  text-decoration: none;
-}
-
-input:hover,
-.btn:hover {
-  opacity: 1;
-}
-
-.fb {
-  background-color: #3B5998;
-  color: white;
-}
-
-.twitter {
-  background-color: #55ACEE;
-  color: white;
-}
-
-.google {
-  background-color: #dd4b39;
-  color: white;
-}
-
-
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #black;
-}
-
-
-.col {
-  float: left;
-  width: 50%;
-  margin: auto;
-  padding: 0 50px;
-  margin-top: 6px;
-}
-
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.vl {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  border: 2px solid #ddd;
-  height: 175px;
-}
-
-.vl-innertext {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #cf7500;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  padding: 8px 10px;
-}
-
-.hide-md-lg {
-  display: none;
-}
-.footer {
-  background-color: #84a9ac;
-  padding: 1px;
-  text-align: center;
-}
-
-.bottom-container {
-  text-align: center;
-  background-color: #30475e;
-  border-radius: 0px 0px 4px 4px;
-}
-
-@media screen and (max-width: 650px) {
-  .col {
-    width: 100%;
-    margin-top: 0;
-  }
-  
-  .vl {
-    display: none;
-  }
-  .hide-md-lg {
-    display: block;
-    text-align: center;
-  }
-}
-</style>
+ <head>
+  <link rel="stylesheet" href="stylez.css">
+  </head>
      <BODY BGCOLOR=”#4682B4">
 
     <title>Business Plan</title>
 
-  </head>
 <h1 TD ALIGN="CENTER";><marquee direction="Right" style="color:aqua;">Business Plan</h1></marquee>
   <h1 TD ALIGN="CENTER" style="border: 1px solid;
     background: black;
@@ -189,12 +31,9 @@ input[type=submit]:hover {
 <h2 style="font-family:cursive" align ="middle" >Student Login</h2>
 
 
-<div class="container">
+<div class="container2">
     <div class="row">
       <h2 style="text-align:center">Login with Social Media or Manually</h2>
-      <div class="vl">
-        <span class="vl-innertext">or</span>
-      </div>
 
       <div class="col">
         <a href="https://www.facebook.com/" class="fb btn">
